--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -19,6 +20,7 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "promise.prototype.finally": "^3.1.2",
+    "sequelize": "^6.6.5",
     "sqlite3": "^4.2.0"
   }
 }
