Set DB storage correctly

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "fsjstd-restapi.db",
+    "storage": "fsjstd-restapi.db",
     "host": "127.0.0.1",
     "dialect": "sqlite"
   },
